fix: modal distortion

--- a/src/components/Modal.module.css
+++ b/src/components/Modal.module.css
@@ -9,14 +9,15 @@
 
 
 .darkBG {
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(0, 0, 0, 0.3);
     width: 100vw;
     height: 100vh;
     z-index: 0;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    position: absolute;
+    position: fixed;
+    z-index: 100;
   }
 
   .centered {
